--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,6 @@ search: false
 
 @charset "utf-8";
 
-// Import theme skins and main partials
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}";
 @import "minimal-mistakes";
 
@@ -16,7 +15,7 @@ search: false
 .site-footer {
   text-align: center;
   padding: 20px 0;
-  background-color: #f8f8f8;  // optional, gives light background
+  background-color: #f8f8f8;
   font-size: 14px;
 }
 
@@ -28,12 +27,13 @@ search: false
 .footer__links a {
   display: inline-block;
   margin: 0 15px;
-  color: #333;  // dark color for footer links
+  color: #333;
   transition: color 0.3s ease;
+  text-decoration: none;
 }
 
 .footer__links a:hover {
-  color: #007acc;  // light blue on hover
+  color: #007acc;
 }
 
 .footer__links img {
@@ -41,9 +41,4 @@ search: false
   height: 24px;
   vertical-align: middle;
   margin-right: 6px;
-}
-
-/* Optional: Remove underline from links in footer */
-.footer__links a {
-  text-decoration: none;
 }
